--- a/index.html
+++ b/index.html
@@ -173,9 +173,11 @@
 			<h3>Зарабатывайте больше, <br>сотрудничая с нами на самых выгодных условиях</h3>
 			<div class="row">
 				<div class="col-sm-6">
-					<img src="img/earn_1.png" alt="">
+					<div class="img_wrapper">
+						<img src="img/earn_1.png" alt="">
+					</div>
 				</div>
-				<div class="col-sm-5 col-sm-offset-1">
+				<div class="col-sm-6 col-lg-5 col-lg-offset-1">
 					<h4>Пробная партия</h4>
 					<p>Наша продукция пользуется спросом не только благодаря доступным ценам, но и высокому качеству. Убедитесь в этом, заказав пробную партию мелким оптом — от 5 единиц. Оплатить ее Вы можете любым удобным для Вас способом, включая наложенный платеж. Если вдруг в течение месяца Вы не продадите пробную партию, мы заберем ее обратно.</p>
 					<a href="#" class="popup"><button class="btn_violet btn_bottom">Заказать пробную партию</button></a>
@@ -272,13 +274,15 @@
 					<div class="prev product_prev bags_prev"></div>
 					<div class="next product_next bags_next"></div>
 					<div class="col-xs-12">
-						<div class="bags_slider">
+						<div class="bags_slider product_slider">
 							<div class="product_item">
 								<div class="product_circle">
 									<img src="img/bag_1.png" alt="">
 								</div>
-								<div class="dots">
-									
+								<div class="colors">
+									<div class="dark_grey"></div>
+									<div class="red"></div>
+									<div class="black"></div>
 								</div>
 							</div>
 							<div class="product_item">
@@ -314,6 +318,8 @@
 								</div>
 							</div>
 						</div>
+						<p>...и еще более 74 моделей</p>
+						<a href="#" class="popup"><button class="btn_violet">Получить каталог</button></a>
 					</div>
 				</div>
 			</div>
@@ -379,7 +385,74 @@
 			<h3>Экокожа — качественная альтернатива <br>натуральной коже</h3>
 			<div class="row">
 				<div class="col-md-4">
-					
+					<div class="eco_item">
+						<h4>Гипоаллергенна</h4>
+						<p>Экокожа — это гипоаллергенный, искусственно созданный материал,
+а не дешевый заменитель из полиэтилена, который со временем выделяет токсические вещества.</p>
+						<span>1</span>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="eco_item">
+						<h4>Выглядит как кожа</h4>
+						<p>Внешне экокожу трудно отличить
+от натуральной кожи. Она выглядят также красиво и дорого. Изделия из экокожи имеют широкую палитру цветов
+и доступную стоимость.</p>
+						<span>2</span>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="eco_item">
+						<h4>Не промокает</h4>
+						<p>Водоотталкивающее свойство экокожи позволяет изделиям не промокать под дождем. Поэтому, в отличие от кожаных, сумки из экокожи не морщатся и долго сохраняют красивый внешний вид.</p>
+						<span>3</span>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="eco_item">
+						<h4>Защита животных</h4>
+						<p>Покупая изделия из экокожи, Вы тем самым поддерживаете общество защиты животных. И подаете хороший пример остальным!</p>
+						<span>4</span>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="eco_item">
+						<img src="img/eco_main.png" alt="">
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="eco_item">
+						<h4>Износостойкость</h4>
+						<p>Износостойкий и прочный материал, благодаря чему изделия из экокожи держат форму и не деформируются со временем.</p>
+						<span>5</span>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="eco_item">
+						<h4>Практичность в уходе</h4>
+						<p>Изделия из экокожи не требуют тщательного ухода. Если сумка запачкалась, достаточно просто
+протереть ее влажной салфеткой.</p>
+						<span>6</span>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="eco_item">
+						<h4>Морозоустойчивость</h4>
+						<p>Экокожа устойчива к перепадам температуры, способна выдерживать
+мороз до -35°С.</p>
+						<span>7</span>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="eco_item">
+						<h4>Пропускает воздух</h4>
+						<p>«Дышащий» материал, способный пропускать воздух в двух направлениях. Поэтому материал не рассыхается, а сумки долго служат.</p>
+						<span>8</span>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -420,7 +493,7 @@
 		<div class="container">
 			<h3>Зарабатывать с нами очень просто</h3>
 			<div class="row">
-				<div class="col-sm-4 col-sm-offset-1">
+				<div class="col-sm-5 col-lg-4 col-lg-offset-1">
 					<div class="step_item">
 						<img src="img/dash.png" alt="" class="dash">
 						<div class="step_img">
@@ -434,7 +507,7 @@
 						<a href="#" class="popup"><button class="btn_violet">Оставить завяку</button></a>
 					</div>
 				</div>
-				<div class="col-sm-4 col-sm-offset-2">
+				<div class="col-sm-5 col-sm-offset-2 col-lg-4 col-lg-offset-2">
 					<div class="step_item">
 						<div class="step_img">
 							<img src="img/step_2.jpg" alt="">
@@ -448,7 +521,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-4 col-sm-offset-2">
+				<div class="col-sm-5 col-sm-offset-1 col-lg-4 col-lg-offset-2">
 					<div class="step_item">
 						<div class="step_img">
 							<img src="img/step_3.jpg" alt="">
@@ -460,7 +533,7 @@
 						<p>После утверждения каталога мы составляем коммерческое предложение, согласовываем его с Вами <br>и формируем заказ.</p>
 					</div>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-5 col-lg-4">
 					<div class="step_item">
 						<div class="step_img">
 							<img src="img/step_4.jpg" alt="">
