--- a/index.html
+++ b/index.html
@@ -66,26 +66,26 @@
 	<header>
 		<div class="container">
 			<div class="row top_head">
-				<div class="col-md-2 logo">
+				<div class="col-sm-2 col-md-2 logo">
 					<img src="img/logo.png" alt="">
 				</div>
-				<div class="col-md-3 desc">
+				<div class="col-sm-3 col-md-3 desc">
 					Оптовая продажа женских сумок, клатчей, рюкзаков в Украине
 				</div>
-				<div class="col-md-2 lang">
+				<div class="col-sm-2 col-md-2 lang">
 					
 				</div>
-				<div class="col-md-2 top_phone">
+				<div class="col-sm-2 col-md-2 top_phone">
 					<a href="tel:+380993843007?call">099 384-30-07</a>
 				</div>
-				<div class="col-md-3 top_btn">
+				<div class="col-sm-3 col-md-3 top_btn">
 					<a class="popup" href="#"><button>Давайте мы перезвоним</button></a>
 				</div>
 			</div>
 			<div class="row main_head">
-				<h1 class="col-md-8">Оптовая продажа женских сумок, клатчей и рюкзаков</h1>
-				<h2 class="col-md-5">из экокожи напрямую из Европы по цене производителя</h2>
-				<div class="col-md-6">
+				<h1 class="col-sm-8">Оптовая продажа женских сумок, клатчей и рюкзаков</h1>
+				<h2 class="col-sm-6 col-ms-5 col-lg-5">из экокожи напрямую из Европы по цене производителя</h2>
+				<div class="col-sm-6">
 					<ul>
 						<li><span>Более 10 популярных брендов</span></li>
 						<li><span>Возможность мелкого опта от 5 единиц</span></li>
@@ -189,7 +189,7 @@
 						<img src="img/earn_2.png" alt="">
 					</div>
 				</div>
-				<div class="col-sm-pull-6 col-sm-5">
+				<div class="col-sm-6 col-sm-pull-6 col-lg-pull-6 col-lg-5">
 					<h4>2 раза в месяц оповещаем о новых поступлениях на склад</h4>
 					<p>Наша продукция пользуется спросом не только благодаря доступным ценам, но и высокому качеству. Убедитесь в этом, заказав пробную партию мелким оптом — от 5 единиц. Оплатить ее Вы можете любым удобным для Вас способом, включая наложенный платеж. Если вдруг в течение месяца Вы не продадите пробную партию, мы заберем ее обратно.</p>
 				</div>
@@ -200,7 +200,7 @@
 						<img src="img/earn_3.png" alt="">
 					</div>
 				</div>
-				<div class="col-sm-5 col-sm-offset-1">
+				<div class="col-sm-6 col-lg-5 col-lg-offset-1">
 					<h4>Система лояльности и регулярные скидки</h4>
 					<p>У нас действует гибкая система лояльности и скидки для постоянных клиентов. Также мы всегда предоставляем скидку на сезонный предзаказ.</p>
 					<a href="#" class="popup"><button class="btn_violet btn_bottom">Заказать пробную партию</button></a>
@@ -212,7 +212,7 @@
 						<img src="img/earn_4.png" alt="">
 					</div>
 				</div>
-				<div class="col-sm-pull-6 col-sm-5">
+				<div class="col-sm-6 col-sm-pull-6 col-lg-pull-6 col-lg-5">
 					<h4>Гарантия качества</h4>
 					<p>В нашем ассортименте сумки из экокожи наивысшего качества, с идеальными швами и  надежной фурнитурой.</p>
 				</div>
@@ -223,7 +223,7 @@
 						<img src="img/earn_5.png" alt="">
 					</div>
 				</div>
-				<div class="col-sm-5 col-sm-offset-1">
+				<div class="col-sm-6 col-lg-5 col-lg-offset-1">
 					<h4>Индивидуальный каталог</h4>
 					<p>Часто бывает, что клиенту трудно сделать правильный выбор из широкого и разнообразного ассортимента. Поэтому мы сформируем каталог индивидуально для Вашего магазина, учитывая все озвученные потребности.</p>
 					<a href="#" class="popup"><button class="btn_violet btn_bottom">Заказать пробную партию</button></a>
@@ -243,7 +243,7 @@
 					<p>Оставьте заявку на формирование индивидуального каталога и получите сертификат на <span>5000 грн</span> в подарок!</p>
 					<span class="timer_header">До конца акции осталось:</span>
 				</div>
-				<div class="col-sm-5 col-sm-offset-1">
+				<div class="col-sm-6 col-md-5 col-md-offset-1">
 					<div class="form_wrapper hidden-xs">
 						<h6>Заполните форму</h6>
 						<p>чтобы получить индивидуальный каталог и сертификат на <span>5000 грн</span></p>
@@ -418,7 +418,7 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="eco_item">
+					<div class="eco_item hidden-sm hidden-xs">
 						<img src="img/eco_main.png" alt="">
 					</div>
 				</div>
